# awarekv

./: CODE_CLOSEOUT_FIX.md  P0_HOTFIX_COMPLETE.md  P0_HOTFIX_DELIVERY.md  P0_HOTFIX_VERIFICATION.md  P1_R_DELIVERY_REPORT.md  P1_R_FINAL_CLOSEOUT.md  P1_R_QUICK_REFERENCE.md  P1_R_RUN_FIX_DELIVERY.md  P1_R_RUN_VERIFICATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_next_next_stage_dev_tasks_awarekv_v2.md  README_next_stage_dev_tasks_awarekv.md  RUNTIME_VALIDATION_GUIDE.md  UPDATE_PROGRESS.md  pyproject.toml  readme_deadline_prefix_kv_vllm.md  requirements-runtime.txt  requirements.txt  test_lifecycle_minimal.py  test_lifecycle_no_torch.py  test_p1r_structure.py  verify_p1r.py  verify_p1r_syntax.py
configs/: deadline_kv_local.yaml  deadline_kv_netem_100m_50ms_loss.yaml  deadline_kv_netem_1g_20ms.yaml
docs/: ARCH.md  EVAL.md  PROTOCOL.md
scripts/: netns_setup.sh  netns_teardown.sh  run_bench.py  run_kv_store.py  run_vllm_server.sh  smoke_test.sh  tc_profile_100m_50ms_loss1.sh  tc_profile_1g_20ms.sh
src/dakv/: config.py  constants.py  logging.py
src/dakv/bench/: __init__.py  longbench_runner.py  metrics_parser.py  mmlu_runner.py  workloads.py
src/dakv/codec/: __init__.py  base.py  fp16_raw.py  int8_symm.py  registry.py
src/dakv/common/: __init__.py  checksum.py  hashing.py  tensor_io.py  time_utils.py  types.py
src/dakv/connector/: __init__.py  deadline_connector.py  loader.py  metadata.py  paged_kv_ops.py  refine_manager.py  save_session.py  saver.py  scheduler_side.py  state.py  vllm_adapter.py  worker_side.py
src/dakv/metrics/: counters.py  events.py  exporter.py
src/dakv/planner/: __init__.py  deadline_planner.py  policies.py
src/dakv/store/: eviction.py  (+5 more)
(+16 files in other folders)
