[project]
name = "dakv"
version = "0.1.0"
description = "Deadline-Aware Prefix KV over Remote/Cold Tier for vLLM"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch==2.1.0",
    "vllm==0.6.3.post1",
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pydantic==2.5.0",
    "numpy==1.24.3",
    "aiohttp==3.9.1",
    "pyyaml==6.0.1",
    "prometheus-client==0.19.0",
    "requests==2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
